feature engineering and exploratory data analysis

--- a/notebooks/exploratory_data_analysis.ipynb
+++ b/notebooks/exploratory_data_analysis.ipynb
@@ -3043,6 +3043,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df[selected_columns].to_csv('../data/processed/selected_features_with_missing.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
