rename files for consistency

--- a/notebooks/v1_data_merge.ipynb
+++ b/notebooks/v1_data_merge.ipynb
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "id": "ChATGJf4_vk6"
    },
    "outputs": [],
    "source": [
-    "o3_and_no2 = pd.read_csv(\"..\\data\\processed\\sorted_griftpark,-utrecht-air-quality.csv\")"
+    "o3_and_no2 = pd.read_csv(r\"..\\data\\processed\\v2_sorted_griftpark,-utrecht-air-quality.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -122,7 +122,7 @@
        "4  07/09/2024    25    13  34    3     "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
        "[3670 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,18 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "id": "91wMW5HX_1py"
    },
    "outputs": [],
    "source": [
-    "utrecht_additional_data = pd.read_csv(r\"..\\data\\raw\\utrecht 2014-01-29 to 2024-09-11.csv\")"
+    "utrecht_additional_data = pd.read_csv(r\"..\\data\\raw\\v1_utrecht 2014-01-29 to 2024-09-11.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -535,7 +535,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "id": "wWNdBHwKE0wm"
    },
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -779,7 +779,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "id": "Q_4dp9v5Fi1-"
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1194,7 +1194,7 @@
        "[3670 rows x 39 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,13 +1205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "id": "gH6X91ctGXR6"
    },
    "outputs": [],
    "source": [
-    "merged_df.to_csv('../data/processed/merged_weather_data.csv')"
+    "merged_df.to_csv('../data/processed/v1_merged_weather_data.csv')"
    ]
   },
   {
